bk_ida/gccida/c0/ix86_expand_aligntest
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_aligntest/src/i386.c:9537:27: error: use of undeclared identifier 'machine_mode'
tmpcount = gen_reg_rtx( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)variable)); 
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_aligntest/src/i386.c:9537:42: error: expected expression
tmpcount = gen_reg_rtx( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)variable)); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_aligntest/src/i386.c:9554:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)variable), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_aligntest/src/i386.c:9554:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)variable), 
                 ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_aligntest/src/obj/i386.o] Error 1
